vlib/v/parser/tests/ref_array_pos_err.vv
struct Foo {
	b &[]u8
	n int
}
